--- a/src/Pages/Sponsors/Card.module.css
+++ b/src/Pages/Sponsors/Card.module.css
@@ -3,29 +3,33 @@
     flex-direction: column;
     /* align-items: center; */
     justify-content: center;
-    background-color: bisque;
-    width: 25rem;
+    background-color: #FFF6EB;
+    width: 30rem;
     height: fit-content;
     padding: 0 2rem 2rem 2rem;
     border-radius: 10px;
   }
   
   .card img {
-    margin-top: -20%;
+    margin-top: 10%;
     width: 100%;
     border-radius: 20px;
+    max-width: 80%;
+    
   }
   
-  .card h2 {
-    margin: 0;
+   .card h2 {
+    /* margin: 0; */
     margin-top: 1rem;
+    align-items:center;
+    text-align: center;
   }
   
   .card p {
     margin: 0;
     margin-top: 0.5rem;
     margin-bottom: 1.5rem;
-  }
+  } 
   
   .card .btnn {
     display: flex;
