--- a/src/Pages/LandingPage/styles/home.module.css
+++ b/src/Pages/LandingPage/styles/home.module.css
@@ -16,16 +16,14 @@
 
 
 .left{
-    min-width: 50%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100vw;
+    z-index: 5;
+}
+
+
+body, html{
+    overflow: hidden;
 }
 
 /* .leftImage{
@@ -34,34 +32,9 @@
     
 } */
 
-.right{
-    min-width: 50%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* background-color: black; */
-    color: white;
-    line-height: 1;
-    font-family: 'myanmar-khyay-regular', sans-serif;
-    font-size: 3rem;
-    font-weight: bold;
-    text-shadow: -11px 12px 11px rgba(0, 0, 0, 0.81);
-    user-select: none;
-}
-
 .polygon{
-    position: relative;
-    margin-left: -60%;
-    margin-top: 10%;
-
-    /* background: rgba(255, 246, 235, 0.32);
-    border-radius: 107px;
-    transform: skew(-25deg); */
-    width: 70%;
-    height: 70%;
-    left: 10px;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -69,182 +42,113 @@
 }
 
 .sheild{
-    /* transform: skew(25deg);
-    width: 50%;
-    height: 50%; */
+    width: 20vw;
+    margin-top: 9%;
+}
+
+.txt{
+    position: absolute;
+    top: 41vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+}
+.blue{
+    z-index: 5;
+    position: relative;
+    left: 80.3%;
+    width: 80vw;
+}
+
+.stroke{
+    z-index: 6;
+    width: 80vw;
     
-    width: 25%;
-    margin-left: 90%;
 }
 
 .content{
-   /* position:relative;
-    left:450px; */
-    position: absolute;
-    margin-bottom: 27%;
-    margin-right: 3%;
-    margin-left: 85%;
-
-}
-.stroke{
-    /* position:absolute;
-    left:318px;
-    margin-bottom: 134px; */
-    position: absolute;
-    margin-bottom: 27%;
-    margin-right: 1.5%;
-    margin-left: 85%;
-}
-.blue{
-    /* position:absolute;
-    left:328px;
-    margin-bottom: 131px; */
-    position: absolute;
-    margin-bottom: 27%;
-    margin-right: 0%;
-    word-spacing: 30%;
-    margin-left: 85%;
-}
-
-.bottom{
-    
-    margin-left: 90%;
-    width: 110vw;
+    z-index: 7;
+    position: relative;
+    right: 80.3%;
+    width: 80vw;
 }
 
 .udlogo{
-    width: 30%;
-    position: absolute;
-    left: 80%;
-    top: 45%
-}
-
-.mobileTitle{
-    display: none;
-}
-
-@keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
+    width: 18vw;
+    opacity: 0.3;
+    margin-top: 3%;
+    transform:rotateZ(180deg);
 }
 
 
- /*@media screen and (max-width: 1730px) {
-    .sheild{
-        margin-left:5%;
-        height:45%;
-    }
-}
-
-@media screen and (max-width: 1500px){
-    .sheild{
-        margin-left:10%;
-        height:40%;
-    }
-}
-@media screen and (max-width: 1300px){
-    .sheild{
-        margin-left:15%;
-        height:35%;
-    }
-    .polygon{
-        height: 50%;
-    }
-} 
-@media screen and (max-width: 1150px){
-    .sheild{
-         margin-left:20%; 
-        
-    }
-    .polygon{
-        height: 45%;
-    }
-} */
-
-@media screen and (max-width: 950px){
-    .right{
-        display: none;
-    }
-    .container{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .left{
-        width: 100%;
-        justify-content: space-evenly;
-    }
-    .polygon{
-        /* transform: skew(0); */
-        position: relative;
-        left: 32.5%;
-        height: 40%;
-        padding: 1.5rem;
-    }
-    .sheild{
-        /* transform: skew(0); */
-       margin-left: 0.7%;
-       width: 45%;
-
-    }
-
-    .bottom{
-        left: auto;
-        width: 190vw;
-        margin: 0;
-        padding: 0;
-        
-    }
-
+@media screen and (max-width:1440px){
     .udlogo{
-        top: 45%;
-        left: auto;
-        width: 45%;
+        width: 17vw;
     }
-    
-   .content{
-        margin-bottom: 46%;
-        margin-left: 10%;
+    .sheild{
+        width: 20vw;
     }
-
+    .txt{
+        top: 40vh;
+    }
     .blue{
-        margin-bottom: 46%;
-        margin-left: 10%;
+        left: 80.3%;
+        width: 80vw;
     }
-
     .stroke{
-        margin-bottom: 46%;
-        margin-left: 10%;
+        width: 80vw;
     }
-
-    .mobileTitle{
-        display: inline;
-        color: white;
-        /* letter-spacing: 0.2rem; */
-        font-size: xx-large;
-        text-align: center;
-        font-family: 'myanmar-khyay-regular', sans-serif;
-        font-weight: bolder;
-        padding-top: 1rem;
+    .content{
+        right: 80.3%;
+        width: 80vw;
     }
 }
-
-@media screen and (max-width: 540px){
-    .sheild{
-        top: 100%;
-        width: 30%;
-    }
-    .bottom{
-        width: 100vw;
-        bottom: 100%;
-    }
-    .udlogo{
-        top: 55%;
-        left: auto;
-        width: 30%;
-    }
-    /* .polygon{
-        height: 40%;
-        width: 70%;
-    } */
+@media screen and (max-width:1210px){
+   .txt{
+    top: 44%;
+   }
+}
+@media screen and (max-width:1000px){
+   .txt{
+    top: 46%;
+   }
+   .sheild{
+    margin-top: 12%;
+   }
+}
+@media screen and (max-width:850px){
+   .txt{
+    top: 48%;
+   }
+   .sheild{
+    margin-top: 14%;
+   }
+}
+@media screen and (max-width:780px){
+   .txt{
+    top: 48%;
+   }
+   .sheild{
+    margin-top: 0%;
+   }
+}
+@media screen and (max-width:700px){
+   .txt{
+    top: 50%;
+   }
+}
+@media screen and (max-width:540px){
+   .txt{
+    top: 52.34%;
+   }
+}
+@media screen and (max-width:400px){
+   .txt{
+    top: 54%;
+   }
+   .sheild{
+    width: 23vw;
+    margin-top: -2%;
+   }
 }
