--- a/src/Pages/LandingPage/styles/home.module.css
+++ b/src/Pages/LandingPage/styles/home.module.css
@@ -79,6 +79,7 @@ body, html{
     opacity: 0.3;
     margin-top: 3%;
     transform:rotateZ(180deg);
+    z-index: 1;
 }
 
 
@@ -151,4 +152,12 @@ body, html{
     width: 23vw;
     margin-top: -2%;
    }
+}
+
+.stars{
+    /* spread this class all accross the background */
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    
 }
