--- a/src/Pages/Sponsors/styles/home.module.css
+++ b/src/Pages/Sponsors/styles/home.module.css
@@ -1,6 +1,6 @@
 .main {
   /* padding-left: 5rem; */
-  background-color: #0D1213;
+  background-color: #0d1213;
   /* width: fit-content; */
   /* padding-right: 5rem; */
   max-width: 100%;
@@ -8,14 +8,16 @@
   animation: fadeIn 1s;
 }
 
+.siteContent {
+  padding: 0 1rem;
+}
 
-.sideBar{
-  width:4vw;
+.sideBar {
+  width: 4vw;
   height: 20vw;
   margin-left: 96vw;
   margin-bottom: -10vw;
 }
-
 
 .mySwiper {
   width: 100vw;
@@ -38,7 +40,7 @@
 .heading {
   padding-top: 10rem;
   text-align: center;
-  color: #FFF6EB;
+  color: #fff6eb;
   font-size: 6rem;
 }
 
@@ -76,7 +78,6 @@
   width: max-content;
   align-items: center;
   vertical-align: center;
-
 }
 
 .container1 {
@@ -88,18 +89,16 @@
   align-items: center;
 }
 
-
 .container2 {
   order: 3;
   flex-basis: 55%;
   justify-content: center;
   align-items: center;
   margin-left: 4rem;
-
 }
 
 .container2 h2 {
-  color: #FFF6EB;
+  color: #fff6eb;
   font-size: 2.5vw;
   max-height: fit-content;
   padding-right: 1vw;
@@ -109,19 +108,18 @@
 .subheading {
   font-size: 550%;
   color: white;
-  margin-left: -67%;
+  /* margin-left: -67%;
   margin-top: -4vw;
-  margin-bottom: 2vw;
+  margin-bottom: 2vw; */
+  padding: 0 1rem;
 }
-
 
 .listStyle {
   text-decoration-color: white;
 }
 
-
 .sponsorText {
-  color: #FA3966;
+  color: #fa3966;
   display: inline-block;
   font-weight: bold;
 }
@@ -152,15 +150,15 @@ p {
   border-radius: 20px;
   padding-left: 5vw; */
 
-  /* ------- flex properties ------- */
+/* ------- flex properties ------- */
 
-  /* display: flex; */
-  /* flex-direction :row ; */
-  /* flex-wrap: wrap; */
-  /* justify-content: space-around;
+/* display: flex; */
+/* flex-direction :row ; */
+/* flex-wrap: wrap; */
+/* justify-content: space-around;
     align-items: center;
     align-content: space-around; */
-  /* display: grid;
+/* display: grid;
   grid-template-columns: repeat(3, 1fr);
 } */
 
@@ -181,11 +179,11 @@ p {
   padding: 1.5rem;
 } */
 
-.why{
+.why {
   margin-left: -5vw;
 }
 
-.circle{
+.circle {
   width: 18vw;
   height: 20vw;
   margin-top: 5vw;
@@ -195,16 +193,22 @@ p {
 .submitButton {
   background-color: #1f90e6;
   font-size: 1.3rem;
-  padding: 0.8rem;
+  padding: 1rem 2rem;
+  /* padding: 0.8rem; */
   /* margin-left: 1rem; */
   border-radius: 10px;
   color: white;
-  border: #FFF6EB;
+  border: #fff6eb;
   /* size: 400%; */
-  width: 200px;
+  /* width: 200px; */
   align-items: center;
-  margin: 0 50% 0 50%;
+  /* margin: 0 50% 0 50%; */
   /* font-size: 1rem; */
+}
+
+.buttonWrapper {
+  display: flex;
+  justify-content: center;
 }
 
 .spnsorformsubmit {
@@ -231,7 +235,7 @@ p {
   background-color: rgb(25, 24, 24, 0.5);
   backdrop-filter: blur(5vw);
   font-size: 1.5vw;
-  margin:1rem 5vw 1rem 5vw;
+  margin: 1rem 5vw 1rem 5vw;
   align-items: center;
   padding: 1vw;
   border-radius: 15px;
@@ -240,7 +244,6 @@ p {
   border-color: rgb(67, 112, 236);
   border-width: 2px;
   width: 80vw;
-
 }
 
 .contactText {
@@ -249,7 +252,7 @@ p {
   backdrop-filter: blur(5px);
   align-content: center;
   /* margin: 1rem; */
-  margin:0 5vw 1rem 5vw;
+  margin: 0 5vw 1rem 5vw;
   padding: 1rem;
   border-radius: 15px;
   outline-color: rgb(154, 238, 255);
@@ -260,7 +263,6 @@ p {
   width: 80vw;
   height: 10vw;
 }
-
 
 /* the following are used to set the background color as black of form fields */
 /* input[type="text"], textarea {
@@ -333,9 +335,7 @@ input[type="submit"]{
 
   background-size: 100% 100%;
   /* background-origin: border-box; */
-
 }
-
 
 /* .whysponsorus{
   display: flex;
@@ -351,7 +351,6 @@ input[type="submit"]{
   justify-content: center;
   align-items: center;
   flex-basis: 100%;
-
 }
 
 .ctContainer1 {
@@ -374,15 +373,12 @@ input[type="submit"]{
     text-align: center;
   }
 
-  .subheading {
+  /* .subheading {
     text-align: center;
-
-
-  }
+  } */
 
   .sponsorUsHead {
     text-align: center;
-
   }
 
   .carousel2 img {
@@ -399,9 +395,9 @@ input[type="submit"]{
     height: 1603px;
     width: 1440px;
   } */
-  .listStyle {
+  /* .listStyle {
     margin-left: -10%;
-  }
+  } */
 
   /* .sponsorForm {
     flex-direction: column-reverse;
@@ -423,7 +419,6 @@ input[type="submit"]{
     flex-basis: 100%;
     justify-content: center;
     align-items: center;
-
   }
 
   /* .submitButton {
@@ -434,8 +429,6 @@ input[type="submit"]{
 
   .contactField {
     font-size: 0.7rem;
-
-
   }
 
   .contactText {
@@ -462,9 +455,45 @@ input[type="submit"]{
   }
 } */
 
+@media screen and (max-width: 1400px) {
+  .whysponsorus {
+    padding-bottom: 10rem;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .subheading {
+    font-size: 350%;
+  }
+  .submitButton {
+    font-size: 1rem;
+  }
+  .whysponsorus {
+    padding-top: 4rem;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .whysponsorus {
+    padding-top: 8rem;
+    padding-bottom: 15rem;
+  }
+  .subheading {
+    font-size: 300%;
+  }
+}
+
 @media screen and (max-width: 676px) {
   .heading {
     font-size: 320%;
+  }
+
+  .whysponsorus {
+    padding-top: 15rem;
+  }
+
+  .submitButton {
+    font-size: 0.75rem;
   }
 
   .subheading {
@@ -473,8 +502,8 @@ input[type="submit"]{
 
   .sponsorUsHead {
     font-size: 280%;
-    text-align: right;
-    margin-left: 800px;
+    /* text-align: right;
+    margin-left: 800px; */
   }
 
   .container1 {
@@ -505,11 +534,17 @@ input[type="submit"]{
   } */
 }
 
-
-
 @media screen and (max-width: 576px) {
-  .main {
+  /* .main {
     padding-left: 2.5rem;
+  } */
+
+  .whysponsorus {
+    padding-top: 12rem;
+  }
+
+  .submitButton {
+    padding: 0.75rem 1rem;
   }
 
   .heading {
@@ -532,8 +567,11 @@ input[type="submit"]{
 }
 
 @media screen and (max-width: 472px) {
-  .main {
+  /* .main {
     padding-left: 2rem;
+  } */
+  .whysponsorus {
+    padding-top: 15rem;
   }
 
   .heading {
@@ -598,6 +636,10 @@ input[type="submit"]{
     font-size: 200%;
   }
 
+  .whysponsorus {
+    padding-top: 10rem;
+  }
+
   .subheading {
     font-size: 180%;
   }
@@ -625,20 +667,29 @@ input[type="submit"]{
   }
 } */
 
-
-
+@media screen and (max-width: 420px) {
+  .whysponsorus {
+    padding-top: 13rem;
+  }
+}
 
 @media screen and (max-width: 372px) {
+  .whysponsorus {
+    padding-top: 8rem;
+    margin-bottom: -50%;
+  }
+
   .heading {
     font-size: 160%;
   }
 
   .subheading {
     font-size: 140%;
+    text-align: center;
   }
 
   .sponsorUsHead {
-    font-size: 100%;
+    font-size: 120%;
   }
 
   .sponsorPara {
