--- a/src/Pages/Gallery/Components/imageArea.module.css
+++ b/src/Pages/Gallery/Components/imageArea.module.css
@@ -8,6 +8,7 @@
     border: 5px white solid;
     background-color: bisque;
     margin: 4px;
+    transition: 0.6s ease-in-out;
 }
 
 .i2
@@ -21,6 +22,7 @@
     border-right: 5px white solid;
     border-bottom: 5px white solid;
     margin: 4px;
+    transition: 0.6s ease-in-out;
     
 }
 
@@ -51,11 +53,27 @@
     border-bottom: 5px white solid;
     background-color: bisque;
     margin: 5px;
+    transition: 0.6s ease-in-out;
 }
 
 .i3:hover
 {
     scale:110%;
+    transition: 0.6s ease-in-out;
+}
+
+.i2:hover
+{
+    scale:110%;
+    transition: 0.6s ease-in-out;
+}
+
+.i1:hover
+{
+    scale:110%;
+    transition: 0.6s ease-in-out;
+    
+    
 }
 
 .c1
