--- a/src/Pages/Sponsors/styles/home.module.css
+++ b/src/Pages/Sponsors/styles/home.module.css
@@ -565,7 +565,7 @@ input[type="submit"]{
   .sponsorUsHead {
     font-size: 200%;
   }
-
+  */
   .sponsorPara {
     /* padding-left: 0.3rem; */
     justify-self: flex-end;
@@ -599,6 +599,7 @@ input[type="submit"]{
     height: 10rem;
   }
 
+  */
   .container2 {
     margin-top: 2rem;
     /* margin-left: 1rem; */
